fixed button's icon+text alignment

--- a/style.css
+++ b/style.css
@@ -91,12 +91,18 @@ button {
     border-radius: 5px;
     border: none;
     margin-bottom: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 button:hover,button:focus {
     background-color: hsl(159, 72%, 11%);
 }
 
+#right img, #bottom img { 
+    margin-right: 10px;
+}
 
 @media screen and (max-width: 600px) {
     #card{
